-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: Internal Code
-
Fully Compatible
-
ALL
-
Repl 2020-09-07
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Parse warning
A parse warning may reduce maintainability of the code, or it may indicate a serious error. A parse warning from the Coverity parser may indicate a bug, or poor coding practice
/src/mongo/db/initialize_api_parameters.h:79: PW.USELESS_TYPE_QUALIFIER_ON_RETURN_TYPE 116165 type qualifier on return type is meaningless