SERVER-50323 Remove const qualifier from return type in initialize_api_parameters.h